refatora a lógica de manipulação de documentos, atualiza a estrutura do banco de dados e melhora a interface de busca

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'">
     <link rel="stylesheet" href="styles.css">
-    <title>Editor de Texto</title>
+    <title>Modelos</title>
   </head>
   <body>
     <div class="container">
       <div class="left-panel">
-        <textarea class="textarea-editor" placeholder="Digite seu texto aqui..."></textarea>
+        <input type="text" class="search-input" placeholder="Pesquisar modelos...">
+        <div id="search-results"></div>
       </div>
       <div id="resizer"></div>
       <div class="right-panel">
-        <input type="text" class="search-input" placeholder="Pesquisar...">
-        <div id="search-results"></div>
+        <textarea class="textarea-editor" placeholder="Digite seu texto aqui..."></textarea>
       </div>
     </div>
     <script src="resizer.js"></script>
