adiciona painel central e melhora a funcionalidade de redimensionamento dos painéis

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,14 @@
 <body>
   <div class="container">
     <div class="left-panel">
-      <textarea class="textarea-editor" placeholder="Digite seu texto aqui..."></textarea>
+      <input type="text" class="search-checklist-input" placeholder="Pesquisar checklists...">
+      <div id="search-checklist-results"></div>
     </div>
-    <div id="resizer"></div>
+    <div id="resizer-left"></div>
+    <div class="editor-panel">
+      <textarea class="textarea-editor" placeholder="Editor principal..."></textarea>
+    </div>
+    <div id="resizer-right"></div>
     <div class="right-panel">
       <input type="text" class="search-input" placeholder="Pesquisar modelos...">
       <div id="search-results"></div>
