adiciona suporte para busca de checklists e refatora handlers IPC

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
   </div>
   <script src="resizer.js"></script>
   <script src="renderer.js"></script>
+  <script src="checklist-renderer.js"></script>
 </body>
 
 </html>
