adiciona editor de texto editável e funcionalidade para inserir modelos com ações de copiar e fechar

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="resizer-left"></div>
     <div class="editor-panel">
-      <textarea class="textarea-editor" placeholder="Editor principal..."></textarea>
+      <div class="textarea-editor" contenteditable="true" placeholder="Editor principal..."></div>
     </div>
     <div id="resizer-right"></div>
     <div class="right-panel">
