remove lógica de inserção de modelo no editor e simplifica o estilo do editor de texto

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="resizer-left"></div>
     <div class="editor-panel">
-      <div class="textarea-editor" contenteditable="true" placeholder="Editor principal..."></div>
+      <div class="textarea-editor"></div>
     </div>
     <div id="resizer-right"></div>
     <div class="right-panel">
