adiciona funcionalidade de redimensionamento ao editor e ajusta estilos

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <div id="resizer-left"></div>
     <div class="editor-panel">
       <div id="editor-container"></div>
+      <div id="editor-resizer"></div>
       <div class="textarea-editor"></div>
     </div>
     <div id="resizer-right"></div>
@@ -33,6 +34,7 @@
   <script src="renderer.js"></script>
   <script src="checklist-renderer.js"></script>
   <script src="quill-script.js"></script>
+  <script src="editor-resizer.js"></script> <!-- Garanta que esta linha esteja presente -->
 </body>
 
 </html>
