refatora a inserção de modelos para usar função compartilhada e remove a função duplicada do renderer

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     </div>
   </div>
   <script src="resizer.js"></script>
+  <script src="shared-functions.js"></script>
   <script src="renderer.js"></script>
   <script src="checklist-renderer.js"></script>
   <script src="quill-script.js"></script>
