--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 
   <link href="../node_modules/quill/dist/quill.snow.css" rel="stylesheet">
   <script src="../node_modules/quill/dist/quill.js"></script>
+
+  <link href="" rel="stylesheet" id="quill-css">
+  <script src="" id="quill-js"></script>
     <title>Modelos</title>
 </head>
 
