--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -16,6 +16,18 @@
 </head>
 
 <body>
+  <div class="custom-titlebar">
+    <div class="titlebar-tabs">
+      <a href="index.html" class="tab active">Modelos (Busca)</a>
+      <a href="gerenciador-modelos.html" class="tab">Modelos (Edição)</a>
+      <a href="gerenciador-checklists.html" class="tab">Checklists (Edição)</a>
+    </div>
+    <div class="window-controls">
+      <button class="minimize-button">─</button>
+      <button class="maximize-button">□</button>
+      <button class="close-button">×</button>
+    </div>
+  </div>
   <div class="container">
     <div class="left-panel">
       <input type="text" class="search-checklist-input" placeholder="Pesquisar checklists...">
@@ -39,6 +51,7 @@
   <script src="checklist-renderer.js"></script>
   <script src="quill-script.js"></script>
   <script src="editor-resizer.js"></script> <!-- Garanta que esta linha esteja presente -->
+  <script src="window-controls.js"></script>
 </body>
 
 </html>
