adiciona funcionalidade de alternância de tema e aplica cores dinâmicas com base no tema atual

--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -23,5 +23,6 @@
         <!-- Conteúdo da página virá aqui -->
     </div>
     <script src="window-controls.js"></script>
+    <script src="theme-toggle.js"></script>
 </body>
 </html>
