--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,14 @@
   </div>
   <div class="container">
     <div class="left-panel">
-      <input type="text" class="search-checklist-input" placeholder="Pesquisar checklists...">
+      <div class="search-container">
+        <input type="text" class="search-checklist-input" placeholder="Pesquisar checklists...">
+        <button class="clear-input" title="Limpar pesquisa">
+            <svg viewBox="0 0 24 24">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+            </svg>
+        </button>
+      </div>
       <div id="search-checklist-results"></div>
     </div>
     <div id="resizer-left"></div>
@@ -49,7 +56,14 @@
     </div>
     <div id="resizer-right"></div>
     <div class="right-panel">
-      <input type="text" class="search-input" placeholder="Pesquisar modelos...">
+      <div class="search-container">
+        <input type="text" class="search-input" placeholder="Pesquisar modelos...">
+        <button class="clear-input" title="Limpar pesquisa">
+            <svg viewBox="0 0 24 24">
+                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+            </svg>
+        </button>
+      </div>
       <div id="search-results"></div>
     </div>
   </div>
