adiciona checkboxes de refinamento de pesquisa e ajusta estilos para melhorar a usabilidade e a aparência

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,16 @@
             </svg>
         </button>
       </div>
+      <div class="search-refinements">
+        <div class="search-refinement-item">
+            <input type="checkbox" id="checklist-nome" checked>
+            <label for="checklist-nome">nome</label>
+        </div>
+        <div class="search-refinement-item">
+            <input type="checkbox" id="checklist-etiqueta">
+            <label for="checklist-etiqueta">etiqueta</label>
+        </div>
+      </div>
       <div id="search-checklist-results"></div>
     </div>
     <div id="resizer-left"></div>
@@ -63,6 +73,20 @@
                 <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
             </svg>
         </button>
+      </div>
+      <div class="search-refinements">
+        <div class="search-refinement-item">
+            <input type="checkbox" id="modelo-nome" checked>
+            <label for="modelo-nome">nome</label>
+        </div>
+        <div class="search-refinement-item">
+            <input type="checkbox" id="modelo-etiqueta">
+            <label for="modelo-etiqueta">etiqueta</label>
+        </div>
+        <div class="search-refinement-item">
+            <input type="checkbox" id="modelo-conteudo">
+            <label for="modelo-conteudo">conteúdo</label>
+        </div>
       </div>
       <div id="search-results"></div>
     </div>
