--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <meta http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="styles/main.css">
-    <title>Gerenciador de Modelos</title>
+
+    <link href="../node_modules/quill/dist/quill.snow.css" rel="stylesheet">
+    <script src="../node_modules/quill/dist/quill.js"></script>
+
+    <link href="" rel="stylesheet" id="quill-css">
+    <script src="" id="quill-js"></script>
+    <title>Modelos</title>
 </head>
-<body>
+
+<body data-page="editor">
     <div class="custom-titlebar">
         <div class="titlebar-tabs">
             <a href="index.html" class="tab">Modelos (Busca)</a>
@@ -16,10 +26,12 @@
         </div>
         <button class="theme-toggle" title="Alternar tema">
             <svg class="theme-icon-light" viewBox="0 0 24 24">
-                <path d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z"/>
+                <path
+                    d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zM2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1zm18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1zm0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1zM5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41L5.99 4.58zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-1.03.39 1.41 0 .39-.39.39-1.03 0-1.41l-1.06-1.06zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0l1.06-1.06z" />
             </svg>
             <svg class="theme-icon-dark" viewBox="0 0 24 24">
-                <path d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-3.03 0-5.5-2.47-5.5-5.5 0-1.82.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1z"/>
+                <path
+                    d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-3.03 0-5.5-2.47-5.5-5.5 0-1.82.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1z" />
             </svg>
         </button>
         <div class="window-controls">
@@ -28,10 +40,49 @@
             <button class="close-button">×</button>
         </div>
     </div>
-    <div class="content">
-        <!-- Conteúdo da página virá aqui -->
+    <div class="container">
+        <div class="editor-panel">
+            <div id="editor-container"></div>
+            <div id="editor-resizer"></div>
+            <div class="textarea-editor"></div>
+        </div>
+        <div id="resizer-right"></div>
+        <div class="right-panel">
+            <div class="search-container">
+                <input type="text" class="search-input" placeholder="Pesquisar modelos...">
+                <button class="clear-input" title="Limpar pesquisa">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                    </svg>
+                </button>
+            </div>
+            <div class="search-refinements">
+                <div class="search-refinement-item">
+                    <input type="checkbox" id="modelo-nome" checked>
+                    <label for="modelo-nome">nome</label>
+                </div>
+                <div class="search-refinement-item">
+                    <input type="checkbox" id="modelo-etiqueta">
+                    <label for="modelo-etiqueta">etiqueta</label>
+                </div>
+                <div class="search-refinement-item">
+                    <input type="checkbox" id="modelo-conteudo">
+                    <label for="modelo-conteudo">conteúdo</label>
+                </div>
+            </div>
+            <div id="search-results"></div>
+        </div>
     </div>
+    <script src="resizer.js"></script>
+    <script src="shared-functions.js"></script>
+    <script src="renderer.js"></script>
+    <script src="checklist-renderer.js"></script>
+    <script src="quill-script.js"></script>
+    <script src="editor-resizer.js"></script> <!-- Garanta que esta linha esteja presente -->
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
+    <script src="highlight-utils.js"></script>
 </body>
+
 </html>
