adiciona campos de entrada para nome e etiquetas no editor de modelos e ajusta estilos dos inputs

--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -42,6 +42,14 @@
     </div>
     <div class="container">
         <div class="editor-panel">
+            <div class="editor-inputs">
+                <div class="input-container">
+                    <input type="text" class="editor-input" id="nome-input" placeholder="Nome do modelo">
+                </div>
+                <div class="input-container">
+                    <input type="text" class="editor-input" id="tag-input" placeholder="Etiquetas (separadas por vírgula)">
+                </div>
+            </div>
             <div id="editor-container"></div>
             <div id="editor-resizer"></div>
             <div class="textarea-editor"></div>
