adiciona botão "Salvar modelo" e estilos para botões primários

--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -49,6 +49,7 @@
                 <div class="input-container">
                     <input type="text" class="editor-input" id="tag-input" placeholder="Etiquetas (separadas por vírgula)">
                 </div>
+                <button class="btn-salvar">Salvar modelo</button>
             </div>
             <div id="editor-container"></div>
             <div id="editor-resizer"></div>
