--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -102,6 +102,7 @@
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
+    <script src="scripts/gerenciador-modelos.js"></script> <!-- Adicionar esta linha -->
 </body>
 
 </html>
