remove Quill editor integration and replace with TinyMCE; adjust styles and clean up unused code

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,7 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
   <link rel="stylesheet" href="styles/main.css">
-
-  <link href="../node_modules/quill/dist/quill.snow.css" rel="stylesheet">
-  <script src="../node_modules/quill/dist/quill.js"></script>
-
-  <link href="" rel="stylesheet" id="quill-css">
-  <script src="" id="quill-js"></script>
+  <script src="../recursos/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Modelos</title>
 </head>
 
@@ -95,8 +90,8 @@
   <script src="shared-functions.js"></script>
   <script src="renderer.js"></script>
   <script src="checklist-renderer.js"></script>
-  <script src="quill-script.js"></script>
-  <script src="editor-resizer.js"></script> <!-- Garanta que esta linha esteja presente -->
+  <script src="tinymce_init.js"></script>
+  <!--<script src="editor-resizer.js"></script> --> <!-- Garanta que esta linha esteja presente -->
   <script src="window-controls.js"></script>
   <script src="theme-toggle.js"></script>
   <script src="highlight-utils.js"></script>
