--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -8,12 +8,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="styles/main.css">
-
-    <link href="../node_modules/quill/dist/quill.snow.css" rel="stylesheet">
-    <script src="../node_modules/quill/dist/quill.js"></script>
-
-    <link href="" rel="stylesheet" id="quill-css">
-    <script src="" id="quill-js"></script>
     <title>Modelos</title>
 </head>
 
@@ -97,8 +91,7 @@
     <script src="shared-functions.js"></script>
     <script src="renderer.js"></script>
     <script src="checklist-renderer.js"></script>
-    <script src="quill-script.js"></script>
-    <script src="editor-resizer.js"></script> <!-- Garanta que esta linha esteja presente -->
+    <!--<script src="editor-resizer.js"></script> --> <!-- Garanta que esta linha esteja presente -->
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
