--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -68,35 +68,10 @@
                     <input type="text" class="editor-input" id="tag-checklist-input"
                         placeholder="Etiquetas (separadas por vírgula)">
                 </div>
-                <!-- Adicionar novo input com botões -->
-                <div class="input-container checklist-item-input">
-                    <input type="text" class="editor-input" id="descricao-item-input" 
-                           placeholder="Digite a descrição do item e pressione Enter...">
-                    <div class="item-actions">
-                        <button class="item-action-btn move-up" title="Mover para cima">
-                            <svg viewBox="0 0 24 24">
-                                <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
-                            </svg>
-                        </button>
-                        <button class="item-action-btn move-down" title="Mover para baixo">
-                            <svg viewBox="0 0 24 24">
-                                <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6z"/>
-                            </svg>
-                        </button>
-                        <button class="item-action-btn paste" title="Colar texto">
-                            <svg viewBox="0 0 24 24">
-                                <path d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z"/>
-                            </svg>
-                        </button>
-                        <button class="item-action-btn close" title="Limpar">
-                            <svg viewBox="0 0 24 24">
-                                <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
                 <button class="btn-salvar">Salvar checklist</button>
             </div>
+            <button class="btn-adicionar-item">Adicionar item</button>
+            <div id="checklist-items-container"></div>
         </div>
         <div id="resizer-right"></div>
         <div class="right-panel">
@@ -134,6 +109,7 @@
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
+    <script src="scripts/gerenciador-checklists.js"></script>
 </body>
 
 </html>
