adiciona funcionalidade de associação de modelos na checklist; implementa modo foco e estiliza botões de ação

--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -12,7 +12,7 @@
     <title>Modelos</title>
 </head>
 
-<body>
+<body data-page="checklist-editor">
     <div class="custom-titlebar">
         <div class="titlebar-tabs">
             <a href="index.html" class="tab">Modelos (Busca)</a>
