--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -60,17 +60,25 @@
         </div>
         <div id="resizer-left"></div>
         <div class="editor-panel">
-            <div class="editor-inputs">
-                <div class="input-container">
-                    <input type="text" class="editor-input" id="nome-checklist-input" placeholder="Nome do checklist">
+            <div class="checklist-header">
+                <div class="editor-inputs">
+                    <div class="input-container">
+                        <input type="text" class="editor-input" id="nome-checklist-input" placeholder="Nome do checklist">
+                    </div>
+                    <div class="input-container">
+                        <input type="text" class="editor-input" id="tag-checklist-input"
+                            placeholder="Etiquetas (separadas por vírgula)">
+                    </div>
+                    <button class="checklist-associate-btn" title="Associar modelo">
+                        <svg viewBox="0 0 24 24">
+                            <path d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z"/>
+                        </svg>
+                    </button>
+                    <button class="btn-salvar">Salvar checklist</button>
                 </div>
-                <div class="input-container">
-                    <input type="text" class="editor-input" id="tag-checklist-input"
-                        placeholder="Etiquetas (separadas por vírgula)">
-                </div>
-                <button class="btn-salvar">Salvar checklist</button>
+                <div class="modelo-associado checklist-header-modelo" data-id="" data-nome="">Modelo: sem modelo associado</div>
+                <button class="btn-adicionar-item">Adicionar item</button>
             </div>
-            <button class="btn-adicionar-item">Adicionar item</button>
             <div id="checklist-items-container"></div>
         </div>
         <div id="resizer-right"></div>
