--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/components/_status-bar.css">
     <script src="../recursos/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Modelos</title>
 </head>
@@ -118,6 +119,12 @@
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
     <script src="scripts/gerenciador-checklists.js"></script>
+    <div class="status-bar">
+        <div class="status-text">
+            Banco de dados: <span id="db-path" style="cursor: pointer;"></span>
+        </div>
+    </div>
+    <script src="scripts/status-bar.js"></script>
 </body>
 
 </html>
