adiciona botão para fechar o banco de dados na barra de status

--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -122,6 +122,7 @@
     <div class="status-bar">
         <div class="status-text">
             Banco de dados: <span id="db-path" style="cursor: pointer;"></span>
+            <button id="close-db" class="status-close-btn" title="Fechar banco de dados">×</button>
         </div>
     </div>
     <script src="scripts/status-bar.js"></script>
