refatora a barra de status para remover texto redundante e ajusta o estilo

--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -64,7 +64,8 @@
             <div class="checklist-header">
                 <div class="editor-inputs">
                     <div class="input-container">
-                        <input type="text" class="editor-input" id="nome-checklist-input" placeholder="Nome do checklist">
+                        <input type="text" class="editor-input" id="nome-checklist-input"
+                            placeholder="Nome do checklist">
                     </div>
                     <div class="input-container">
                         <input type="text" class="editor-input" id="tag-checklist-input"
@@ -72,12 +73,14 @@
                     </div>
                     <button class="checklist-associate-btn" title="Associar modelo">
                         <svg viewBox="0 0 24 24">
-                            <path d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z"/>
+                            <path
+                                d="M19 2h-4.18C14.4.84 13.3 0 12 0c-1.3 0-2.4.84-2.82 2H5c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 0c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm7 18H5V4h2v3h10V4h2v16z" />
                         </svg>
                     </button>
                     <button class="btn-salvar">Salvar checklist</button>
                 </div>
-                <div class="modelo-associado checklist-header-modelo" data-id="" data-nome="">Modelo: sem modelo associado</div>
+                <div class="modelo-associado checklist-header-modelo" data-id="" data-nome="">Modelo: sem modelo
+                    associado</div>
                 <button class="btn-adicionar-item">Adicionar item</button>
             </div>
             <div id="checklist-items-container"></div>
@@ -121,9 +124,9 @@
     <script src="scripts/gerenciador-checklists.js"></script>
     <div class="status-bar">
         <div class="status-text">
-            Banco de dados: <span id="db-path" style="cursor: pointer;"></span>
-            <button id="close-db" class="status-close-btn" title="Fechar banco de dados">×</button>
+            Banco de dados <span id="db-path" style="cursor: pointer;"></span>
         </div>
+        <button id="close-db" class="status-close-btn" title="Fechar banco de dados">×</button>
     </div>
     <script src="scripts/status-bar.js"></script>
 </body>
