--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/base/_preload.css">
+    <script src="preload-theme.js"></script>
     <meta http-equiv="Content-Security-Policy"
         content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;">
     <link rel="stylesheet"
