adiciona sistema de persistência para o conteúdo do editor entre abas e sessões

--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -91,6 +91,7 @@
             </div>
         </div>
     </div>
+    <script src="editor-persistence.js"></script>
     <script src="resizer.js"></script>
     <script src="shared-functions.js"></script>
     <script src="renderer.js"></script>
@@ -98,6 +99,7 @@
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
+    <script src="editor-persistence.js"></script>
     <script src="scripts/gerenciador-modelos.js"></script>
     <div class="status-bar">
         <div class="status-text">
