--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,7 @@
       <div id="search-results"></div>
     </div>
   </div>
+  <script src="editor-persistence.js"></script>
   <script src="resizer.js"></script>
   <script src="shared-functions.js"></script>
   <script src="renderer.js"></script>
@@ -102,6 +103,7 @@
   <script src="window-controls.js"></script>
   <script src="theme-toggle.js"></script>
   <script src="highlight-utils.js"></script>
+  <script src="editor-persistence.js"></script>
   <div class="status-bar">
     <div class="status-text">
       Banco de dados <span id="db-path" style="cursor: pointer;"></span>
@@ -109,6 +111,7 @@
     <button id="close-db" class="status-close-btn" title="Fechar banco de dados">×</button>
   </div>
   <script src="scripts/status-bar.js"></script>
+  <script src="editor-persistence.js"></script>
 </body>
 
 </html>
