atualiza estilo de email e corrige cores de borda em checkmarks

--- a/src/configuracoes.html
+++ b/src/configuracoes.html
@@ -96,7 +96,7 @@
                 <div class="about-info">
                     <p>Versão: <span id="app-version">0.1.0</span></p>
                     <p>Desenvolvido por: Alfredo Rolim Pereira</p>
-                    <p>email: rolimalfredo@gmail.com</p>  
+                    <p><i><u>rolimalfredo@gmail.com</u></i></p>  
                 </div>
             </div>
         </div>
