--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components/_status-bar.css">
+    <link rel="stylesheet" href="styles/components/_modelo-dialog.css">
     <script src="../recursos/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Modelos</title>
 </head>
@@ -110,6 +111,7 @@
     <script src="shared-functions.js"></script>
     <script src="renderer.js"></script>
     <script src="checklist-renderer.js"></script>
+    <script src="scripts/modelo-dialog.js"></script>
     <script src="tinymce_init.js"></script>
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
