--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -11,6 +11,8 @@
         href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components/_status-bar.css">
+    <!-- Adicionar CSS do diálogo de modelo -->
+    <link rel="stylesheet" href="styles/components/_modelo-dialog.css">
     <script src="../recursos/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Modelos</title>
 </head>
@@ -86,6 +88,8 @@
     <script src="resizer.js"></script>
     <script src="shared-functions.js"></script>
     <script src="renderer.js"></script>
+    <!-- Adicionar script do diálogo de modelo antes da inicialização do TinyMCE -->
+    <script src="scripts/modelo-dialog.js"></script>
     <script src="tinymce_init.js"></script>
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
