--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -70,6 +70,9 @@
                     <input type="checkbox" id="modelo-conteudo">
                     <label for="modelo-conteudo">conteúdo</label>
                 </div>
+                <button class="collapse-panel-btn" data-target="right" title="Colapsar painel">
+                    <svg viewBox="0 0 24 24"><path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"/></svg>
+                </button>
             </div>
             <div id="search-results">
                 <div class="resultado-modelo-container">
@@ -102,6 +105,7 @@
         <button id="close-db" class="status-close-btn" title="Fechar banco de dados">×</button>
     </div>
     <script src="scripts/status-bar.js"></script>
+    <script src="scripts/panel-collapser.js"></script>
 </body>
 
 </html>
