--- a/src/configuracoes.html
+++ b/src/configuracoes.html
@@ -95,8 +95,10 @@
                 <h3>Sobre</h3>
                 <div class="about-info">
                     <p>Versão: <span id="app-version">0.1.0</span></p>
+                    <p>Licença: GNU General Public License v3.0</p>
                     <p>Desenvolvido por: Alfredo Rolim Pereira</p>
-                    <p><i><u>rolimalfredo@gmail.com</u></i></p>  
+                    <p>Repositório: <i><u>https://github.com/Amolpploma/templates</u></i></p>
+                    <p>Email: <i><u>rolimalfredo@gmail.com</u></i></p>  
                 </div>
             </div>
         </div>
