--- a/src/configuracoes.html
+++ b/src/configuracoes.html
@@ -96,9 +96,21 @@
                 <div class="about-info">
                     <p>Versão: <span id="app-version">0.1.0</span></p>
                     <p>Licença: GNU General Public License v3.0</p>
-                    <p>Desenvolvido por: Alfredo Rolim Pereira</p>
                     <p>Repositório: <i><u>https://github.com/Amolpploma/templates</u></i></p>
-                    <p>Email: <i><u>rolimalfredo@gmail.com</u></i></p>  
+                    <div class="license-buttons">
+                        <button id="view-license-btn" class="config-btn">
+                            <svg viewBox="0 0 24 24" class="config-icon">
+                                <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm-2 16c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-2-4h4v3h-4v-3zm0-4h4v2h-4v-2zm-1-3V4l5 5h-5z"/>
+                            </svg>
+                            LICENÇA
+                        </button>
+                        <button id="view-notice-btn" class="config-btn">
+                            <svg viewBox="0 0 24 24" class="config-icon">
+                                <path d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/>
+                            </svg>
+                            DEPENDÊNCIAS DE TERCEIROS
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -159,6 +171,22 @@
                     <span class="loading-spinner"></span>
                     Exportar Selecionados
                 </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal para exibir conteúdo dos arquivos LICENSE e NOTICE -->
+    <div class="modal-overlay" id="file-content-modal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 id="file-content-title">Conteúdo do Arquivo</h3>
+                <button class="modal-close" id="file-content-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <pre id="file-content-text" class="file-content-pre"></pre>
+            </div>
+            <div class="modal-footer">
+                <button class="modal-btn" id="file-content-close-btn">Fechar</button>
             </div>
         </div>
     </div>
