atualiza a navegação para usar 'gerenciador-modelos.html' e adiciona painel de pesquisa na interface de edição de modelos

--- a/src/configuracoes.html
+++ b/src/configuracoes.html
@@ -18,8 +18,7 @@
 <body data-page="configuracoes">
     <div class="custom-titlebar">
         <div class="titlebar-tabs">
-            <a href="index.html" class="tab">Modelos (Busca)</a>
-            <a href="gerenciador-modelos.html" class="tab">Modelos (Edição)</a>
+            <a href="gerenciador-modelos.html" class="tab">Modelos</a>
             <a href="gerenciador-checklists.html" class="tab">Checklists (Edição)</a>
             <a href="configuracoes.html" class="tab active">Configurações</a>
         </div>
