--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -19,8 +19,7 @@
 <body data-page="checklist-editor">
     <div class="custom-titlebar">
         <div class="titlebar-tabs">
-            <a href="index.html" class="tab">Modelos (Busca)</a>
-            <a href="gerenciador-modelos.html" class="tab">Modelos (Edição)</a>
+            <a href="gerenciador-modelos.html" class="tab">Modelos</a>
             <a href="gerenciador-checklists.html" class="tab active">Checklists (Edição)</a>
             <a href="configuracoes.html" class="tab">Configurações</a>
         </div>
