--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -20,8 +20,7 @@
 <body data-page="editor">
     <div class="custom-titlebar">
         <div class="titlebar-tabs">
-            <a href="index.html" class="tab">Modelos (Busca)</a>
-            <a href="gerenciador-modelos.html" class="tab active">Modelos (Edição)</a>
+            <a href="gerenciador-modelos.html" class="tab active">Modelos</a>
             <a href="gerenciador-checklists.html" class="tab">Checklists (Edição)</a>
             <a href="configuracoes.html" class="tab">Configurações</a>
         </div>
@@ -32,6 +31,32 @@
         </div>
     </div>
     <div class="container">
+        <div class="left-panel">
+            <div class="search-container">
+                <input type="text" class="search-checklist-input" placeholder="Pesquisar checklists...">
+                <button class="clear-input" title="Limpar pesquisa">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
+                    </svg>
+                </button>
+            </div>
+            <div class="search-refinements">
+                <div class="search-refinement-item">
+                    <input type="checkbox" id="checklist-nome" checked>
+                    <label for="checklist-nome">nome</label>
+                </div>
+                <div class="search-refinement-item">
+                    <input type="checkbox" id="checklist-etiqueta">
+                    <label for="checklist-etiqueta">etiqueta</label>
+                </div>
+                <button class="collapse-panel-btn" data-target="left" title="Colapsar painel">
+                    <svg viewBox="0 0 24 24"><path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"/></svg>
+                </button>
+            </div>
+            <div id="search-checklist-results"></div>
+        </div>
+        <div id="resizer-left"></div>
         <div class="editor-panel">
             <div class="editor-inputs">
                 <div class="input-container">
@@ -91,6 +116,7 @@
     <script src="resizer.js"></script>
     <script src="shared-functions.js"></script>
     <script src="renderer.js"></script>
+    <script src="checklist-renderer.js"></script>
     <!-- Adicionar script do diálogo de modelo antes da inicialização do TinyMCE -->
     <script src="scripts/modelo-dialog.js"></script>
     <script src="tinymce_init.js"></script>
