adiciona estilos aprimorados para diálogos e melhora a função showDialog

--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="styles/components/_status-bar.css">
     <!-- Adicionar CSS do diálogo de modelo -->
     <link rel="stylesheet" href="styles/components/_modelo-dialog.css">
+    <!-- Adicionar CSS aprimorado para diálogos -->
+    <link rel="stylesheet" href="styles/components/_enhanced-dialog.css">
     <script src="../recursos/tinymce/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Modelos</title>
 </head>
