--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -133,6 +133,7 @@
     <script src="scripts/modelo-dialog.js"></script>
     <script src="tinymce_init.js"></script>
     <script src="scripts/editor-tabs.js"></script>
+    <script src="scripts/tab-navigation.js"></script>
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
