adiciona suporte para importação de modelos a partir de arquivos de texto e implementa módulo de diálogos personalizados

--- a/src/configuracoes.html
+++ b/src/configuracoes.html
@@ -183,6 +183,7 @@
     </div>
 
     <script src="window-controls.js"></script>
+    <script src="scripts/dialog.js"></script>
     <script src="scripts/configuracoes.js"></script>
     <div class="status-bar">
         <div class="status-text">
