--- a/src/gerenciador-checklists.html
+++ b/src/gerenciador-checklists.html
@@ -115,6 +115,7 @@
     <script src="window-controls.js"></script>
     <script src="theme-toggle.js"></script>
     <script src="highlight-utils.js"></script>
+    <script src="scripts/dialog.js"></script>
     <script src="scripts/gerenciador-checklists.js"></script>
     <div class="status-bar">
         <div class="status-text">
