--- a/src/gerenciador-modelos.html
+++ b/src/gerenciador-modelos.html
@@ -131,6 +131,8 @@
     <script src="checklist-renderer.js"></script>
     <!-- Adicionar script do diálogo de modelo antes da inicialização do TinyMCE -->
     <script src="scripts/modelo-dialog.js"></script>
+    <script src="scripts/dialog.js"></script>
+    <script src="scripts/gerenciador-modelos.js"></script>
     <script src="tinymce_init.js"></script>
     <script src="scripts/editor-tabs.js"></script>
     <script src="scripts/tab-navigation.js"></script>
