adiciona handler para resolver conflitos de importação de modelos e implementa diálogo de resolução; atualiza lógica de importação para gerenciar conflitos

--- a/src/configuracoes.html
+++ b/src/configuracoes.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/components/_status-bar.css">
     <link rel="stylesheet" href="styles/components/_configuracoes.css">
+    <link rel="stylesheet" href="styles/components/_conflito-modal.css">
     <title>Configurações</title>
 </head>
 
